# depthai_cpp_example

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/AprilTag/: apriltag.cpp  apriltag_rgb.cpp
examples/ImageManip/: image_manip_tiling.cpp
examples/MobileNet/: camera_mobilenet_sync_example.cpp  mono_mobilenet.cpp  rgb_mobilenet.cpp  rgb_mobilenet_4k.cpp  video_mobilenet.cpp  webcam_mobilenet_example.cpp
examples/ObjectTracker/: object_tracker.cpp  object_tracker_video.cpp  spatial_object_tracker.cpp
examples/Script/: script_change_pipeline_flow.cpp  script_forward_frames.cpp
examples/SpatialDetection/: spatial_calculator_multi_roi.cpp  spatial_location_calculator.cpp  spatial_mobilenet.cpp  spatial_mobilenet_mono.cpp  spatial_tiny_yolo.cpp
examples/Yolo/: tiny_yolo.cpp
examples/bootloader/: bootloader_config.cpp  bootloader_version.cpp  flash_bootloader.cpp  flash_user_bootloader.cpp
examples/mixed/: mono_depth_mobilenetssd.cpp  rgb_encoding_mobilenet.cpp  rgb_encoding_mono_mobilenet.cpp  rgb_encoding_mono_mobilenet_depth.cpp
get_network_info/: CMakeLists.txt  get_network_info.cpp
utility/: CMakeLists.txt  utility.cpp  utility.hpp
